# weather_forecast_collector

./: .gitignore  README.md  pyproject.toml
collector/: city_list_manager.py  data_collector.py  db_manager.py  exceptions.py  models.py  utils.py
data/: city_list.json  city_list1.txt  city_list2.json
tests/: test_utils.py
tests/fixtures/utils_fixtures/: city_list2.json  city_list4.json
