[tool.poetry]
name = "weather-forecast-collector"
version = "0.1.0"
description = ""
authors = ["NNbaur"]
readme = "README.md"
packages = [{include = "weather_forecast_collector"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
sqlalchemy = "^1.4.45"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
