[tool.poetry]
name = "weather-forecast-collector"
version = "0.1.0"
description = ""
authors = ["NNbaur"]
readme = "README.md"
packages = [{include = "weather_forecast_collector"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
sqlalchemy = "^1.4.45"
flake8 = "^6.0.0"
mypy = "^0.991"
logging = "^0.4.9.6"
apscheduler = "^3.9.1.post1"
psycopg2 = "^2.9.5"
dotenv = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
